# media-curator

./: .gitignore  AGENTS.md  Cargo.toml  MediaComparator.ts  PROJECT.md  README.md  VPTree.ts  biome.json  buf.yaml  bun.lockb  eslint.config.js  index.ts  lefthook.yml  package.json  tsconfig.eslint.json  tsconfig.json
.doctrine/: project.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
crates/media-curator-cli/: Cargo.toml
crates/media-curator-cli/src/: cache_keys.rs  dedup.rs  discovery.rs  extensions.rs  file_stats.rs  hamming.rs  lib.rs  main.rs  transfer.rs
crates/media-curator-cli/tests/: cli_version.rs  health_subcommand.rs  media_curator_differential.rs
docs/: package.json
docs/adr/: ADR-168-fleet-media-curator-rust-north-star.md
docs/specs/: media-curator-migration-ledger.json  (+1 more)
scripts/: check-language-hygiene.sh  check-native-packaging.sh  check-no-ts-file-stats-backend.sh  check-proto-buf.sh  run-media-curator-differential.sh  stage-rust-cli.ts
src/: comparatorUtils.ts  deduplicator.ts  discovery.ts  errors.ts  fileProcessor.ts  gatherer.ts  pipelineMain.ts  transfer.ts  types.ts  utils.ts
tests/: comparatorUtils.test.ts  deduplicator.integration.test.ts  deduplicator.test.ts  discovery.integration.test.ts  discovery.test.ts  fileProcessor.test.ts  gatherer.integration.test.ts  gatherer.test.ts  nativeCliShipped.matrix.test.ts  rustCli.bridge.test.ts  transfer.integration.test.ts  transfer.test.ts  utils.test.ts
verification/: media-curator-contracts-proto-ssot-non-executing-abi.json  media-curator-differential-green.json
(+25 files in other folders)
