[package]
name = "media-curator-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Media Curator Rust CLI (ADR-168 S0 health + version)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "media-curator-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
