[package]
name = "media-curator-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Media Curator Rust CLI (ADR-168 production authority cores)"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "media-curator-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
